default/objects/E2E_Data_Object__c/E2E_Data_Object__c.object-meta.xml
<CustomObject>
    <label>E2E Data Object</label>
    <nameField>
        <label>E2E Data Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>E2E Data Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>