default/objects/E2E_Data_Object__c/fields/Accept_Sepa__c.field-meta.xml
<CustomField>
    <fullName>Accept_Sepa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accept Sepa</label>
    <type>Checkbox</type>
</CustomField>