default/objects/E2E_Data_Object__c/fields/Agree_to_process_pers_data_for_marketing__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_process_pers_data_for_marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agree to process pers data for marketing</label>
    <type>Checkbox</type>
</CustomField>