default/objects/E2E_Data_Object__c/fields/Agreement_Privacy_Policy__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Privacy_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement Privacy Policy</label>
    <type>Checkbox</type>
</CustomField>