default/objects/E2E_Data_Object__c/fields/Agreement_To_Phone_Contact__c.field-meta.xml
<CustomField>
    <fullName>Agreement_To_Phone_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement To Phone Contact</label>
    <type>Checkbox</type>
</CustomField>