default/objects/E2E_Data_Object__c/fields/Agreement_To_Receive_Info_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Agreement_To_Receive_Info_By_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement To Receive Info By Email</label>
    <type>Checkbox</type>
</CustomField>