default/objects/E2E_Data_Object__c/fields/Authorized_Signatory_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signatory_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorized Signatory Confirmed</label>
    <type>Checkbox</type>
</CustomField>