default/objects/E2E_Data_Object__c/fields/Available_Min_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Available_Min_Deposit__c</fullName>
    <label>Available Min Deposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>