default/objects/E2E_Data_Object__c/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <label>Bank Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>