default/objects/E2E_Data_Object__c/fields/Bank_Account_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Prefix__c</fullName>
    <label>Bank Account Prefix</label>
    <length>6</length>
    <type>Text</type>
</CustomField>