default/objects/E2E_Data_Object__c/fields/Bank_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Code__c</fullName>
    <label>Bank Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>