default/objects/E2E_Data_Object__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>