default/objects/E2E_Data_Object__c/fields/Billing_Period__c.field-meta.xml
<CustomField>
    <fullName>Billing_Period__c</fullName>
    <label>Billing Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>