default/objects/E2E_Data_Object__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <length>30</length>
    <type>Text</type>
</CustomField>