default/objects/E2E_Data_Object__c/fields/Collection_Limit_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Collection_Limit_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collection Limit Agreement</label>
    <type>Checkbox</type>
</CustomField>