default/objects/E2E_Data_Object__c/fields/Company_Form__c.field-meta.xml
<CustomField>
    <fullName>Company_Form__c</fullName>
    <label>Company Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>