default/objects/E2E_Data_Object__c/fields/Company_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Short_Name__c</fullName>
    <label>Company Short Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>