default/objects/E2E_Data_Object__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>de</fullName>
            </value>
            <value>
                <fullName>at</fullName>
            </value>
            <value>
                <fullName>nl</fullName>
            </value>
            <value>
                <fullName>pl</fullName>
            </value>
            <value>
                <fullName>hu</fullName>
            </value>
            <value>
                <fullName>fr</fullName>
            </value>
            <value>
                <fullName>befr</fullName>
            </value>
            <value>
                <fullName>benl</fullName>
            </value>
            <value>
                <fullName>chde</fullName>
            </value>
            <value>
                <fullName>chfr</fullName>
            </value>
            <value>
                <fullName>sk</fullName>
            </value>
            <value>
                <fullName>cz</fullName>
            </value>
            <value>
                <fullName>lu</fullName>
            </value>
            <value>
                <fullName>be_fr</fullName>
                <isActive>false</isActive>
                <label>be_fr</label>
            </value>
            <value>
                <fullName>be_nl</fullName>
                <isActive>false</isActive>
                <label>be_nl</label>
            </value>
            <value>
                <fullName>ch_de</fullName>
                <isActive>false</isActive>
                <label>ch_de</label>
            </value>
            <value>
                <fullName>ch_fr</fullName>
                <isActive>false</isActive>
                <label>ch_fr</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>