default/objects/E2E_Data_Object__c/fields/Credit_System_Rating__c.field-meta.xml
<CustomField>
    <fullName>Credit_System_Rating__c</fullName>
    <label>Credit System Rating</label>
    <length>20</length>
    <type>Text</type>
</CustomField>