default/objects/E2E_Data_Object__c/fields/Current_Language__c.field-meta.xml
<CustomField>
    <fullName>Current_Language__c</fullName>
    <label>Current Language</label>
    <length>10</length>
    <type>Text</type>
</CustomField>