default/objects/E2E_Data_Object__c/fields/Current_Step__c.field-meta.xml
<CustomField>
    <fullName>Current_Step__c</fullName>
    <label>Current Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>