default/objects/E2E_Data_Object__c/fields/Customer_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_IP_Address__c</fullName>
    <label>Customer IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>