default/objects/E2E_Data_Object__c/fields/Deposit_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposit Agreement</label>
    <type>Checkbox</type>
</CustomField>