default/objects/E2E_Data_Object__c/fields/Deposit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Reason__c</fullName>
    <label>Deposit Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>