default/objects/E2E_Data_Object__c/fields/Direct_Debit_Mandate_Type__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Mandate_Type__c</fullName>
    <label>Direct Debit Mandate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>B2B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>