default/objects/E2E_Data_Object__c/fields/E2E_Finish_Details__c.field-meta.xml
<CustomField>
    <fullName>E2E_Finish_Details__c</fullName>
    <label>E2E Finish Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Completed</fullName>
            </value>
            <value>
                <fullName>Order Completed</fullName>
            </value>
            <value>
                <fullName>Awaiting Payment</fullName>
            </value>
            <value>
                <fullName>Order Submitted</fullName>
            </value>
            <value>
                <fullName>Report Ordering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>