default/objects/E2E_Data_Object__c/fields/E2E_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>E2E_Last_Activity__c</fullName>
    <label>E2E Last Activity</label>
    <type>DateTime</type>
</CustomField>