default/objects/E2E_Data_Object__c/fields/E2E_Status__c.field-meta.xml
<CustomField>
    <fullName>E2E_Status__c</fullName>
    <label>E2E Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>