default/objects/E2E_Data_Object__c/fields/E_Invoice__c.field-meta.xml
<CustomField>
    <fullName>E_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E-Invoice</label>
    <type>Checkbox</type>
</CustomField>