default/objects/E2E_Data_Object__c/fields/Home_Station__c.field-meta.xml
<CustomField>
    <fullName>Home_Station__c</fullName>
    <label>Home Station</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>