default/objects/E2E_Data_Object__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>E2E Data Objects</relationshipLabel>
    <relationshipName>E2E_Data_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>