default/objects/E2E_Data_Object__c/fields/Max_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Max_Credit_Limit__c</fullName>
    <label>Max Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>