default/objects/E2E_Data_Object__c/fields/Paper_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Paper_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paper Invoice</label>
    <type>Checkbox</type>
</CustomField>