default/objects/E2E_Data_Object__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>