default/objects/E2E_Data_Object__c/fields/PM__c.field-meta.xml
<CustomField>
    <fullName>PM__c</fullName>
    <label>PM</label>
    <length>30</length>
    <type>Text</type>
</CustomField>