default/objects/E2E_Data_Object__c/fields/Recent_Running_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Recent_Running_Jobs__c</fullName>
    <label>Recent Running Jobs</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>