default/objects/E2E_Data_Object__c/fields/Registered_City__c.field-meta.xml
<CustomField>
    <fullName>Registered_City__c</fullName>
    <label>Registered City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>