default/objects/E2E_Data_Object__c/fields/Registered_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Registered_Postal_Code__c</fullName>
    <label>Registered Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>