default/objects/E2E_Data_Object__c/fields/Security_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Security_Amount_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Security Amount Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>