default/objects/E2E_Data_Object__c/fields/Security_Level__c.field-meta.xml
<CustomField>
    <fullName>Security_Level__c</fullName>
    <label>Security Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>