default/objects/E2E_Data_Object__c/fields/Selected_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Selected_Company_Id__c</fullName>
    <label>Selected Company Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>