default/objects/E2E_Data_Object__c/fields/Selected_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Selected_Company_Name__c</fullName>
    <label>Selected Company Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>