default/objects/E2E_Data_Object__c/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <label>StageName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Pending Sales – Information</fullName>
            </value>
            <value>
                <fullName>Pending Sales – Deposit</fullName>
            </value>
            <value>
                <fullName>Credit Approved</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Qualify</fullName>
            </value>
            <value>
                <fullName>Propose</fullName>
            </value>
            <value>
                <fullName>Negotiate</fullName>
            </value>
            <value>
                <fullName>Pending Credit Report</fullName>
            </value>
            <value>
                <fullName>Pending Credit - E2E Check</fullName>
            </value>
            <value>
                <fullName>Credit Report Generated</fullName>
            </value>
            <value>
                <fullName>finish</fullName>
                <isActive>false</isActive>
                <label>finish</label>
            </value>
            <value>
                <fullName>pending deposit</fullName>
                <isActive>false</isActive>
                <label>pending deposit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>