default/objects/E2E_Data_Object__c/fields/SWIFT__c.field-meta.xml
<CustomField>
    <fullName>SWIFT__c</fullName>
    <label>SWIFT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>