default/objects/E2E_Data_Object__c/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <label>Tax ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>