default/objects/E2E_Data_Object__c/fields/Terms_And_Conditions_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Terms_And_Conditions_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms And Conditions Agreement</label>
    <type>Checkbox</type>
</CustomField>