default/objects/E2E_Data_Object__c/fields/Trade_Register_Number__c.field-meta.xml
<CustomField>
    <fullName>Trade_Register_Number__c</fullName>
    <label>Trade Register Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>