default/objects/E2E_Data_Object__c/fields/Utm_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Utm_Campaign__c</fullName>
    <label>Utm Campaign</label>
    <length>100</length>
    <type>Text</type>
</CustomField>