default/objects/E2E_Data_Object__c/fields/Utm_Content__c.field-meta.xml
<CustomField>
    <fullName>Utm_Content__c</fullName>
    <label>Utm Content</label>
    <length>100</length>
    <type>Text</type>
</CustomField>