default/objects/E2E_Data_Object__c/fields/Utm_Medium__c.field-meta.xml
<CustomField>
    <fullName>Utm_Medium__c</fullName>
    <label>Utm Medium</label>
    <length>100</length>
    <type>Text</type>
</CustomField>