default/objects/E2E_Data_Object__c/fields/Utm_Placement__c.field-meta.xml
<CustomField>
    <fullName>Utm_Placement__c</fullName>
    <label>Utm Placement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>