default/objects/E2E_Data_Object__c/fields/Utm_Products__c.field-meta.xml
<CustomField>
    <fullName>Utm_Products__c</fullName>
    <label>Utm Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>