default/objects/E2E_Data_Object__c/fields/Utm_Source__c.field-meta.xml
<CustomField>
    <fullName>Utm_Source__c</fullName>
    <label>Utm Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>