default/objects/E2E_Data_Object__c/fields/Utm_Term__c.field-meta.xml
<CustomField>
    <fullName>Utm_Term__c</fullName>
    <label>Utm Term</label>
    <length>100</length>
    <type>Text</type>
</CustomField>