default/objects/E2E_Data_Object__c/fields/Utm_Url__c.field-meta.xml
<CustomField>
    <fullName>Utm_Url__c</fullName>
    <label>Utm Url</label>
    <length>100</length>
    <type>Text</type>
</CustomField>