default/objects/E2E_Data_Object__c/fields/Vat_ID__c.field-meta.xml
<CustomField>
    <fullName>Vat_ID__c</fullName>
    <label>Vat ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>