default/objects/E2E_Data_Object__c/fields/Verification_Code__c.field-meta.xml
<CustomField>
    <fullName>Verification_Code__c</fullName>
    <label>Verification Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>