default/objects/E2E_Data_Object__c/fields/Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>Verification_Date__c</fullName>
    <label>Verification Date</label>
    <type>DateTime</type>
</CustomField>