default/objects/E2E_Data_Object__c/recordTypes/Austria.recordType-meta.xml
<RecordType>
    <fullName>Austria</fullName>
    <active>true</active>
    <label>Austria</label>
</RecordType>