default/objects/E2E_Data_Object__c/recordTypes/Belgium_FR.recordType-meta.xml
<RecordType>
    <fullName>Belgium_FR</fullName>
    <active>true</active>
    <label>Belgium-FR</label>
</RecordType>