default/objects/E2E_Data_Object__c/recordTypes/Belgium_NL.recordType-meta.xml
<RecordType>
    <fullName>Belgium_NL</fullName>
    <active>true</active>
    <label>Belgium-NL</label>
</RecordType>