default/objects/E2E_Data_Object__c/recordTypes/Czech_Republic.recordType-meta.xml
<RecordType>
    <fullName>Czech_Republic</fullName>
    <active>true</active>
    <label>Czech Republic</label>
</RecordType>