default/objects/E2E_Data_Object__c/recordTypes/Czech_Republic_CCS.recordType-meta.xml
<RecordType>
    <fullName>Czech_Republic_CCS</fullName>
    <active>true</active>
    <label>Czech Republic CCS</label>
</RecordType>