default/objects/E2E_Data_Object__c/recordTypes/France.recordType-meta.xml
<RecordType>
    <fullName>France</fullName>
    <active>true</active>
    <label>France</label>
</RecordType>