default/objects/E2E_Data_Object__c/recordTypes/Germany.recordType-meta.xml
<RecordType>
    <fullName>Germany</fullName>
    <active>true</active>
    <label>Germany</label>
</RecordType>