default/objects/E2E_Data_Object__c/recordTypes/Hungary.recordType-meta.xml
<RecordType>
    <fullName>Hungary</fullName>
    <active>true</active>
    <label>Hungary</label>
</RecordType>