default/objects/E2E_Data_Object__c/recordTypes/Luxembourg.recordType-meta.xml
<RecordType>
    <fullName>Luxembourg</fullName>
    <active>true</active>
    <label>Luxembourg</label>
</RecordType>