default/objects/E2E_Data_Object__c/recordTypes/Netherlands.recordType-meta.xml
<RecordType>
    <fullName>Netherlands</fullName>
    <active>true</active>
    <label>Netherlands</label>
</RecordType>