default/objects/E2E_Data_Object__c/recordTypes/Poland.recordType-meta.xml
<RecordType>
    <fullName>Poland</fullName>
    <active>true</active>
    <label>Poland</label>
</RecordType>