default/objects/E2E_Data_Object__c/recordTypes/Poland_Lotos.recordType-meta.xml
<RecordType>
    <fullName>Poland_Lotos</fullName>
    <active>true</active>
    <label>Poland Lotos</label>
</RecordType>