default/objects/E2E_Data_Object__c/recordTypes/Slovakia.recordType-meta.xml
<RecordType>
    <fullName>Slovakia</fullName>
    <active>true</active>
    <label>Slovakia</label>
</RecordType>