default/objects/E2E_Data_Object__c/recordTypes/Slovakia_CCS.recordType-meta.xml
<RecordType>
    <fullName>Slovakia_CCS</fullName>
    <active>true</active>
    <label>Slovakia CCS</label>
</RecordType>