default/objects/E2E_Data_Object__c/recordTypes/Switzerland_DE.recordType-meta.xml
<RecordType>
    <fullName>Switzerland_DE</fullName>
    <active>true</active>
    <label>Switzerland-DE</label>
</RecordType>