default/objects/E2E_Data_Object__c/recordTypes/Switzerland_FR.recordType-meta.xml
<RecordType>
    <fullName>Switzerland_FR</fullName>
    <active>true</active>
    <label>Switzerland-FR</label>
</RecordType>